added checkout page

--- a/src/index.css
+++ b/src/index.css
@@ -669,13 +669,55 @@
 .main-checkout-container{
   max-width: 1100px;
   margin-inline: auto;
-  margin-top: 3rem;
+  padding: 2rem 4rem;
 }
 
 .checkout-grid-container{
   padding: 2rem 1rem;
   display: grid;
+  grid-template-columns: 2fr 1fr; 
   
 }
 
+.checkout-personal-info{
+  border: 1px solid black;
+}
+
+.checkout-all-products-container{
+  border: 1px solid black;
+}
+
+.description-list-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.3rem;
+}
+
+.image-n-title-summary{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.title-summary{
+  font-size: 0.7rem;
+  text-overflow: ellipsis;
+  max-width: 150px;
+}
+
+.price-summary{
+  font-size: 0.7rem;
+  color: #555;
+}
+
+.summary-repeat-info{
+  margin-right: 0.5rem;
+}
+
+.image-n-title-summary > img {
+  max-width: 40px;
+  max-height: auto;
+  margin-left: 0.5rem;
+}
 /*Grid for Checkout-------*/
